@@ -7196,6 +7196,10 @@ the delivery report value
 the delivery report URL value
 </entry></row>
 
+<row><entry><literal>%N</literal></entry><entry>
+the delivery report notification message
+</entry></row>
+
 <row><entry><literal>%D</literal></entry><entry>
 meta-data from the SMSC. See <xref linkend="meta-data"/> for more into.
 </entry></row>
