@@ -1,3 +1,8 @@
+2015-07-01  Stipe Tolj  <stolj at kannel.org>
+    * doc/userguide/userguide.xml: add documentation for escape code %N for DLR
+      notification text.
+    * gw/bb_alog.c: implement %N escape code for 'access-log-format' pattern.
+    
 2015-06-24 Alexander Malysh <amalysh at kannel.org>
     * configure.in, configure: fixed library search path order issue on OSX with
       MacPorts installed where iconv library was not found for linking.
